--- a/openOrca_llama_2.ipynb
+++ b/openOrca_llama_2.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "gpuType": "T4"
+      "gpuType": "T4",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -9939,8 +9940,18 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/sabre-code/openorca-finetuning/blob/main/openOrca_llama_2.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "ZLBcD25czJQ5"
       },
@@ -9957,7 +9968,7 @@
       "metadata": {
         "id": "IA09VXoCzbNv"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -9972,7 +9983,7 @@
         "id": "GikYAtq907gb",
         "outputId": "cc66578d-facd-4dbb-ed74-11ac6938d97f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10000,7 +10011,7 @@
         "id": "WHuSkG0z23sE",
         "outputId": "6ae3ec4e-89a5-42c2-cfb0-30b3d507132e"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10027,7 +10038,7 @@
       "metadata": {
         "id": "cOAiOUOK2Lx3"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10038,7 +10049,7 @@
       "metadata": {
         "id": "p-gzUcXq4KaT"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10052,7 +10063,7 @@
       "metadata": {
         "id": "utJGCNs72PMj"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10067,7 +10078,7 @@
         "id": "tCNwTeqd5KX6",
         "outputId": "d41c7ee3-d7fd-4aee-ccaf-68a9c3acf0a1"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10101,7 +10112,7 @@
       "metadata": {
         "id": "WRQwa9O___gw"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10116,7 +10127,7 @@
         "id": "PcUqZbD9-qJG",
         "outputId": "c92143c1-e9a8-4615-96ad-757056a34924"
       },
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10142,7 +10153,7 @@
       "metadata": {
         "id": "S9UulwLsJilN"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10184,7 +10195,7 @@
         "id": "YG3jkEDtcPcd",
         "outputId": "001e5a51-4f26-4068-84c6-2ee816142461"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10208,7 +10219,7 @@
       "metadata": {
         "id": "Odo_915Ur5IF"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10248,7 +10259,7 @@
         "id": "36ZShoRSs2st",
         "outputId": "6006c34c-ee04-4c70-9326-6a4579bb732c"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -10305,7 +10316,7 @@
         "id": "9j2oePgcs4C6",
         "outputId": "677dc08b-ed58-4020-d6d0-4286d20f1ce9"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10352,7 +10363,7 @@
         "id": "l8wpelQZwmC1",
         "outputId": "38ea0e48-0947-4fe0-ec77-c0518707c724"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10424,7 +10435,7 @@
         "id": "6wU6tFAqOlf-",
         "outputId": "f2ac8e7b-768d-4537-85e1-6bef9969dbc6"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -10494,7 +10505,7 @@
         "id": "Rsfhpj5cSzAF",
         "outputId": "b9190f54-4bbd-4e22-ca85-91fcad3915c4"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10524,7 +10535,7 @@
         "id": "pLUD38GbTfS9",
         "outputId": "9855903c-7a10-41a4-ce06-322626be8261"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -10559,7 +10570,7 @@
       "metadata": {
         "id": "bsffw9rXPwaW"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -10673,7 +10684,7 @@
       "metadata": {
         "id": "sfJW1h28tNjL"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -11003,7 +11014,7 @@
         "id": "I5lDm3oytUVM",
         "outputId": "93f4a614-02b0-459e-bbde-eb451a054d42"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -11484,6 +11495,26 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#"
+      ],
+      "metadata": {
+        "id": "ghe9WYf4Rz7c"
+      },
+      "execution_count": 1,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "X1OoMb3kR1U8"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
